--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -19,7 +19,12 @@
         app:strokeWidth="1dp"
 
         />
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="trans"
+        android:onClick="trans"
+        />
     <TextView
 
 
