--- a/app/src/main/res/layout/activity_not_ramu.xml
+++ b/app/src/main/res/layout/activity_not_ramu.xml
@@ -4,10 +4,7 @@
     android:id="@+id/activity_not_ramu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="20dp"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp"
-    android:paddingTop="20dp"
+
     android:orientation="vertical"
     tools:context="com.jaya.hackthaonproject.NotRamu"
     android:weightSum="2">
@@ -32,39 +29,44 @@
             android:layout_weight="1"
             android:weightSum="2">
             <TextView
-                android:text="Not Enough Resource"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_gravity="center"
-                android:textSize="15sp"
-                android:textColor="#000000"
-                android:id="@+id/textViews1"
-                android:paddingTop="10dp"
-                android:layout_weight="0.6"/>
-
-            <TextView
-                android:text="More Required"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:textColor="#000000"
-                android:textSize="15dp"
-                android:id="@+id/textViews2"
-                android:layout_weight="0.6"
-                android:paddingTop="10dp"
-                android:gravity="center"/>
-
-            <TextView
-                android:text="More Required"
+                android:text="More Required:"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:textColor="@color/colorAccent"
-                android:textSize="15dp"
+                android:textSize="20dp"
                 android:paddingTop="10dp"
-                android:layout_weight="0.8"
-                android:gravity="left"/>
+                android:layout_weight="1"
+                android:gravity="right"/>
+            <TextView
+                android:text="Not Enough "
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_gravity="right"
+                android:textSize="15dp"
+               android:textStyle="bold"
+                android:textColor="#000000"
+                android:id="@+id/textViews1"
+                android:paddingTop="10dp"
+
+                android:layout_weight="0.5"/>
+
+            <TextView
+                android:text="More "
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="left"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:id="@+id/textViews2"
+                android:layout_weight="0.5"
+                android:paddingTop="10dp"
+               />
+
+
         </LinearLayout>
 
         <TextView
@@ -72,8 +74,8 @@
              On The Resource and proceed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:layout_gravity="center"
+            android:gravity="center"
             android:textColor="@android:color/holo_red_dark"
             android:paddingTop="10dp"
             android:textSize="15dp"
@@ -84,10 +86,106 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.4">
+        android:layout_weight="0.2">
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:orientation="vertical"
+
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="10dp"
+                android:background="#ffffff">
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:orientation="horizontal"
+                android:background="#DCDCDC"
+                android:weightSum="220"
+                >
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="35dp"
+                    android:background="#ffffff"
+                    android:layout_weight="5"
+                    >
+                </LinearLayout>
+
+
+                <TextView
+
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:id="@+id/resource_type_preempt"
+                    android:text="Resource Type"
+                    android:textColor="#00897B"
+                    android:gravity="center"
+                    android:textSize="15dp"
+                    android:layout_weight="105"
+
+                    />
+
+                <TextView
+
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:id="@+id/resource_id_preempt"
+                    android:text="Resource Id"
+                    android:textColor="#ffffff"
+                    android:gravity="center"
+                    android:textSize="15dp"
+                    android:layout_weight="105"
+                    android:background="#00897B"
+                    />
+
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="35dp"
+                    android:background="#ffffff"
+                    android:layout_weight="5"
+                    >
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="10dp"
+                android:background="#ffffff">
+            </LinearLayout>
+        </LinearLayout>
+
+
+
+
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.0">
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/list"></ListView>
+            android:id="@+id/listdata_not_ramu"
+            ></ListView>
+
     </LinearLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.2"
+        android:text="PREEMPT"
+        android:background="@color/colorPrimary"
+        android:textColor="#ffffff"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:layout_margin="15dp"
+        android:id="@+id/premptdata"
+        />
 </LinearLayout>
