--- a/app/src/main/res/layout/activity_res_loc.xml
+++ b/app/src/main/res/layout/activity_res_loc.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_transport"
+    android:id="@+id/activity_res_location"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.jaya.hackthaonproject.Transport">
-
+    tools:context="com.jaya.hackthaonproject.ResLoc"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="35dp"
@@ -28,7 +27,7 @@
             android:layout_height="match_parent"
             android:layout_weight="104"
             android:gravity="center"
-            android:text="Demand ID"
+            android:text="Resource ID"
             android:textColor="#ffffff"
             android:textSize="15dp"
 
@@ -45,68 +44,25 @@
             android:layout_height="match_parent"
             android:layout_weight="105"
             android:gravity="center"
-            android:text="Destination ID"
-            android:textColor="#ffffff"
-            android:textSize="15dp" />
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="35dp"
-            android:layout_weight="5"
-            android:background="#ffffff"></LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:background="#DCDCDC"
-        android:orientation="horizontal"
-        android:weightSum="220">
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="35dp"
-            android:layout_weight="5"
-            android:background="#ffffff"></LinearLayout>
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="104"
-            android:gravity="center"
-            android:text="Resource Type"
-            android:textColor="#FF4081"
-            android:textSize="15dp" />
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="35dp"
-            android:layout_weight="1"
-            android:background="#FF4081"></LinearLayout>
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="105"
-            android:gravity="center"
-            android:text="No of Resources"
+            android:text="Source ID"
             android:textColor="#FF4081"
             android:textSize="15dp"
-
-            />
+            android:background="#DCDCDC"/>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="35dp"
             android:layout_weight="5"
-            android:background="#ffffff"></LinearLayout>
+            android:background="#ffffff">
+
+        </LinearLayout>
 
     </LinearLayout>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listview_transport">
+        android:id="@+id/listview_res_loc">
 
     </ListView>
+
 </LinearLayout>
