--- a/app/src/main/res/layout/activity_res_loc.xml
+++ b/app/src/main/res/layout/activity_res_loc.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:background="#FF4081"
-        android:weightSum="220">
+        android:weightSum="193">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -25,9 +25,9 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="104"
+            android:layout_weight="60"
             android:gravity="center"
-            android:text="Resource ID"
+            android:text="Source ID"
             android:textColor="#ffffff"
             android:textSize="15dp"
 
@@ -42,12 +42,29 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="105"
+            android:layout_weight="60"
             android:gravity="center"
-            android:text="Source ID"
+            android:text="Resource Type"
             android:textColor="#FF4081"
             android:textSize="15dp"
             android:background="#DCDCDC"/>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="35dp"
+            android:layout_weight="1"
+            android:background="#ffffff"></LinearLayout>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="60"
+            android:gravity="center"
+            android:text="Available No"
+            android:textColor="#ffffff"
+            android:textSize="15dp"
+
+            />
 
         <LinearLayout
             android:layout_width="0dp"
