--- a/app/src/main/res/menu/activity_transporter_drawer.xml
+++ b/app/src/main/res/menu/activity_transporter_drawer.xml
@@ -4,11 +4,11 @@
     <group android:checkableBehavior="single">
 
         <item
-            android:id="@+id/track_resources_pc"
+            android:id="@+id/transported_resources_pc"
             android:icon="@drawable/ic_track_resources"
-            android:title="Transport Resource" />
+            android:title="Transported Resource" />
         <item
-            android:id="@+id/available_pc"
+            android:id="@+id/track"
             android:icon="@drawable/ic_view_database"
             android:title="Track Resource"/>
 
