--- a/app/src/main/res/layout/activity_new_demand.xml
+++ b/app/src/main/res/layout/activity_new_demand.xml
@@ -4,102 +4,121 @@
     android:id="@+id/activity_new_demand"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="30dp"
     android:paddingTop="10dp"
-    tools:context="com.jaya.hackthaonproject.NewDemand"
-    android:orientation="vertical">
+    tools:context="com.jaya.hackthaonproject.NewDemand">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:text="Priority"
-            android:textSize="16sp"
             android:layout_marginLeft="8dp"
-            android:textColor="#000000"/>
+            android:text="Priority"
+            android:textColor="#000000"
+            android:textSize="16sp" />
+
         <Spinner
+            android:id="@+id/prioritySpinner"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:id="@+id/prioritySpinner"
-            android:spinnerMode="dropdown"/>
+            android:spinnerMode="dropdown" />
+
         <TextView
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:text="Deadline"
-            android:textSize="16sp"
             android:layout_marginLeft="10dp"
-            android:textColor="#000000"/>
+            android:text="Deadline"
+            android:textColor="#000000"
+            android:textSize="16sp" />
+
         <EditText
+            android:id="@+id/deadline"
             android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/deadline"/>
+            android:layout_height="wrap_content" />
     </LinearLayout>
     <!-- adding resources -->
     <fragment
+        android:name="com.jaya.hackthaonproject.NewDemandFrag"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:name="com.jaya.hackthaonproject.NewDemandFrag"
-        tools:layout="@layout/fragment_new_demand"/>
+        tools:layout="@layout/fragment_new_demand" />
+    <TextView
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:text="Purpose"
+        android:textColor="#000000"
+        android:textSize="16sp" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/purpose"/>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="250dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:weightSum="10">
-    <TextView
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="15dp"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:text="Requested Resources:"
-        android:textColor="@color/colorAccent"
-        />
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="7"
-        android:layout_marginLeft="15dp"
-        android:id="@+id/listScroll">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <fragment
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:name="com.jaya.hackthaonproject.ReqResource"
-                tools:layout="@layout/fragment_req_resource"
-                android:layout_marginTop="5dp"
-                android:id="@+id/req_res"/>
-        </LinearLayout>
-    </ScrollView>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:text="Submit"
-        android:background="@color/colorPrimary"
-        android:textColor="#fff"
-        android:textSize="19dp"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:onClick="submit"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/submitBtn"
-        android:textStyle="bold"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_weight="1"
-        android:layout_marginBottom="20dp"
-        />
-    </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="2"
+                android:text="Requested Resources:"
+                android:textColor="@color/colorAccent" />
+
+            <ScrollView
+                android:id="@+id/listScroll"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginLeft="15dp"
+                android:layout_weight="7">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <fragment
+                        android:id="@+id/req_res"
+                        android:name="com.jaya.hackthaonproject.ReqResource"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        tools:layout="@layout/fragment_req_resource" />
+                </LinearLayout>
+            </ScrollView>
+
+            <Button
+                android:id="@+id/submitBtn"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_weight="1"
+                android:background="@color/colorPrimary"
+                android:onClick="submit"
+                android:text="Submit"
+                android:textColor="#fff"
+                android:textSize="19dp"
+                android:textStyle="bold" />
+        </LinearLayout>
     </ScrollView>
 
 </LinearLayout>
